style: rm overflow to avoid unexpected cover.

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -21,7 +21,6 @@
 
   #infiniteMarquee {
     width: 100%;
-    overflow: hidden;
     box-shadow: 50px 0px 50px rgb(70, 69, 69, 0.1);
     background-color: rgba(176, 176, 176, 0.25);
     padding: 15px 0 12px 0;
